--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text">
 </head>
 <body id="gradient">
-<h1>Background Generator</h1>
+<h1>cool Generator</h1>
 <input class="color1" type="color"
 <h2>current css background</h2>
 <h3></h3>
