--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body id="gradient">
 <h1>cool Generator</h1>
 <input class="color1" type="color"
-<h2>current css background</h2>
-<h3>jfodjgldv</h3>
+<h2>this is  background</h2>
+<h3></h3>
 <script type ="text/javascript" src>
 </body>
 </html>
